--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,26 @@
     <title>Document</title>
   </head>
   <body>
-	  <main>
+    <main>
+      <div class="container">
+        <header class="header">
+          <img
+            src="./assets/images/logo_mobile_black 1.png"
+            alt=""
+            class="logo"
+          />
+        </header>
+
+        <div class="quote">
+          <div class="quote__p-wrapper">
+            <p class="quote__p">
+              Зритель для меня не потребитель моей продукции, не судья, а
+              соучастник творчества, соавтор.
+            </p>
+            <p class="author">Андрей Тарковский</p>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
