завершил работу с БЭМоми !!!

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,36 @@
     <title>Document</title>
   </head>
   <body>
-	  
+    <div class="footer">
+      <div class="footer__upper">
+        <div class="herader"></div>
+        <div class="footer__item">
+          <div class="footer__price">
+            <div class="footer__word"></div>
+            <div class="footer__number"></div>
+          </div>
+          <div class="footer__text">
+            <div class="footer__text-left"></div>
+            <div class="footer__text-right"></div>
+          </div>
+        </div>
+      </div>
+      <div class="footer__bottom">
+        <div class="footer__left-side">
+          <div class="footer__logo"></div>
+          <div class="footer__icon">
+            <div class="footer__inst"></div>
+            <div class="footer__facebook"></div>
+            <div class="footer__VK"></div>
+            <div class="footer__WhatsApp"></div>
+          </div>
+        </div>
+        <div class="footer__right-side">
+          <div class="footer__number"></div>
+          <div class="footer__mail"></div>
+        </div>
+        <div class="footer__copyright"></div>
+      </div>
+    </div>
   </body>
 </html>
