--- a/src/index.html
+++ b/src/index.html
@@ -8,35 +8,74 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="footer">
-      <div class="footer__upper">
-        <div class="herader"></div>
-        <div class="footer__item">
-          <div class="footer__price">
-            <div class="footer__word"></div>
-            <div class="footer__number"></div>
-          </div>
-          <div class="footer__text">
-            <div class="footer__text-left"></div>
-            <div class="footer__text-right"></div>
+    <div class="wrapper">
+      <div class="footer">
+        <div class="footer__upper">
+          <div class="herader">Начало курса — 8 сентября</div>
+          <div class="footer__item">
+            <div class="footer__price">
+              <div class="footer__word">Стоимость</div>
+              <div class="footer__number">3900 руб.</div>
+            </div>
+            <div class="footer__text">
+              <div class="text-left">
+                <div class="text-left__header">Для любого уровня</div>
+                <div class="text-left__text">
+                  Курс подходит и тем, кто начинает «с нуля», и тем, кто хочет
+                  упорядочить имеющиеся знания.
+                </div>
+              </div>
+              <div class="text-right">
+                <div class="text-right__header">Проходите сейчас</div>
+                <div class="text-right__text">
+                  Если вы не успели на вебинар, всегда можете посмотреть запись
+                  в личном кабинете
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="footer__bottom">
-        <div class="footer__left-side">
-          <div class="footer__logo"></div>
-          <div class="footer__icon">
-            <div class="footer__inst"></div>
-            <div class="footer__facebook"></div>
-            <div class="footer__VK"></div>
-            <div class="footer__WhatsApp"></div>
+        <div class="footer__bottom">
+          <div class="footer__top">
+            <div class="footer__left-side">
+              <div class="footer__logo">
+                <img
+                  src="./assets/photo/footer/logo_mobile_white 1.png"
+                  alt=""
+                />
+              </div>
+              <div class="footer__icon">
+                <div class="footer__inst">
+                  <img src="./assets/photo/footer/noroot(4).png" alt="" />
+                </div>
+                <div class="footer__facebook">
+                  <img src="./assets/photo/footer/fb.png" alt="" />
+                </div>
+                <div class="footer__VK">
+                  <img src="./assets/photo/footer/25684 1.png" alt="" />
+                </div>
+                <div class="footer__WhatsApp">
+                  <img src="./assets/photo/footer/noroot(2).png" alt="" />
+                </div>
+              </div>
+            </div>
+            <div class="footer__right-side">
+              <div class="mobile">
+                <div class="mobile_icon">
+                  <img src="./assets/photo/footer/phone_white.png" alt="" />
+                </div>
+                <div class="mobile_number">+7 (499) 39-146-39</div>
+              </div>
+              <div class="mail">
+                <div class="mail_icon">
+                  <img src="./assets/photo/footer/mail_white.png" alt="" />
+                </div>
+                <div class="mail_address">hello@synchronize.ru</div>
+              </div>
+            </div>
           </div>
+          <div class="footer__copyright">© Синхронизация, 2020</div>
         </div>
-        <div class="footer__right-side">
-          <div class="footer__number"></div>
-          <div class="footer__mail"></div>
-        </div>
-        <div class="footer__copyright"></div>
       </div>
     </div>
   </body>
