--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,49 @@
             class="logo"
           />
         </header>
+        <div class="first-block">
+          <div class="first-block__elements-wrapper">
+            <div class="first-block__elements-top">
+              <div class="first-block__element">
+                <img
+                  src="./assets/images/globe.svg"
+                  alt="globe"
+                  class="globe"
+                />
+                <p class="first-block__p">онлайн-курс</p>
+              </div>
+              <div class="first-block__element">
+                <img
+                  src="./assets/images/img_135744.svg"
+                  alt="clock"
+                  class="clock"
+                />
+                <p class="first-block__p">18 часов</p>
+              </div>
+              <div class="first-block__element">
+                <img
+                  src="./assets/images/calendar_2.svg"
+                  alt="calendar"
+                  class="calendar"
+                />
+                <p class="first-block__p">8 сентября</p>
+              </div>
+            </div>
+          </div>
+          <div class="first-block__text-wrapper">
+            <div class="first-block__text">
+              <div class="first-block__h-wrapper">
+                <p class="first-block__h">Как смотреть кино</p>
+              </div>
+              <div class="first-block__p-wrapper">
+                <p class="first-block__p-text">
+                  За 8 занятий станем активными зрителями и разберёмся в
+                  кинопроцессе
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <div class="quote">
           <div class="quote__p-wrapper">
