--- a/src/index.html
+++ b/src/index.html
@@ -19,15 +19,15 @@
             </div>
             <div class="footer__text">
               <div class="text-left">
-                <div class="text-left__header">Для любого уровня</div>
-                <div class="text-left__text">
+                <div class="text-left__header text__header">Для любого уровня</div>
+                <div class="text-left__text text">
                   Курс подходит и тем, кто начинает «с нуля», и тем, кто хочет
                   упорядочить имеющиеся знания.
                 </div>
               </div>
               <div class="text-right">
-                <div class="text-right__header">Проходите сейчас</div>
-                <div class="text-right__text">
+                <div class="text-right__header text__header">Проходите сейчас</div>
+                <div class="text-right__text text">
                   Если вы не успели на вебинар, всегда можете посмотреть запись
                   в личном кабинете
                 </div>
@@ -36,7 +36,7 @@
           </div>
         </div>
         <div class="footer__bottom">
-          <div class="footer__top">
+          <div class="footer__bottom-top">
             <div class="footer__left-side">
               <div class="footer__logo">
                 <img
@@ -45,29 +45,29 @@
                 />
               </div>
               <div class="footer__icon">
-                <div class="footer__inst">
+                <div class="footer__inst icon__left">
                   <img src="./assets/photo/footer/noroot(4).png" alt="" />
                 </div>
-                <div class="footer__facebook">
+                <div class="footer__facebook icon__left">
                   <img src="./assets/photo/footer/fb.png" alt="" />
                 </div>
-                <div class="footer__VK">
+                <div class="footer__VK icon__left">
                   <img src="./assets/photo/footer/25684 1.png" alt="" />
                 </div>
-                <div class="footer__WhatsApp">
+                <div class="footer__WhatsApp icon__left">
                   <img src="./assets/photo/footer/noroot(2).png" alt="" />
                 </div>
               </div>
             </div>
             <div class="footer__right-side">
               <div class="mobile">
-                <div class="mobile_icon">
+                <div class="mobile_icon icon__right">
                   <img src="./assets/photo/footer/phone_white.png" alt="" />
                 </div>
                 <div class="mobile_number">+7 (499) 39-146-39</div>
               </div>
               <div class="mail">
-                <div class="mail_icon">
+                <div class="mail_icon icon__right">
                   <img src="./assets/photo/footer/mail_white.png" alt="" />
                 </div>
                 <div class="mail_address">hello@synchronize.ru</div>
