desktop version-draft

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <div class="container">
-        <header class="header">
+        <header>
           <img
             src="./assets/images/logo_mobile_black 1.png"
             alt=""
@@ -19,31 +19,25 @@
         </header>
         <div class="first-block">
           <div class="first-block__elements-wrapper">
-            <div class="first-block__elements-top">
-              <div class="first-block__element">
-                <img
-                  src="./assets/images/globe.svg"
-                  alt="globe"
-                  class="globe"
-                />
-                <p class="first-block__p">онлайн-курс</p>
-              </div>
-              <div class="first-block__element">
-                <img
-                  src="./assets/images/img_135744.svg"
-                  alt="clock"
-                  class="clock"
-                />
-                <p class="first-block__p">18 часов</p>
-              </div>
-              <div class="first-block__element">
-                <img
-                  src="./assets/images/calendar_2.svg"
-                  alt="calendar"
-                  class="calendar"
-                />
-                <p class="first-block__p">8 сентября</p>
-              </div>
+            <div class="first-block__element">
+              <img src="./assets/images/globe.svg" alt="globe" class="globe" />
+              <p class="first-block__p">онлайн-курс</p>
+            </div>
+            <div class="first-block__element">
+              <img
+                src="./assets/images/img_135744.svg"
+                alt="clock"
+                class="clock"
+              />
+              <p class="first-block__p">18 часов</p>
+            </div>
+            <div class="first-block__element">
+              <img
+                src="./assets/images/calendar_2.svg"
+                alt="calendar"
+                class="calendar"
+              />
+              <p class="first-block__p">8 сентября</p>
             </div>
           </div>
           <div class="first-block__text-wrapper">
@@ -58,16 +52,24 @@
                 </p>
               </div>
             </div>
+            <div class="first-block__img-wrapper">
+              <img
+                src="./assets/images/noroot 1.jpg"
+                alt="photo"
+                class="first-block__img"
+              />
+            </div>
           </div>
-        </div>
-
-        <div class="quote">
-          <div class="quote__p-wrapper">
-            <p class="quote__p">
-              Зритель для меня не потребитель моей продукции, не судья, а
-              соучастник творчества, соавтор.
-            </p>
-            <p class="author">Андрей Тарковский</p>
+          <div class="quote-wrapper">
+            <div class="quote">
+              <div class="quote__p-wrapper">
+                <p class="quote__p">
+                  Зритель для меня не потребитель моей продукции, не судья, а
+                  соучастник творчества, соавтор.
+                </p>
+                <p class="author">Андрей Тарковский</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
