--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
     <main class="main">
       <div class="block6">
         <div class="block6__container container">
-          <div class="title">Начало курса — 8 сентября</div>
+          <div class="block6__title title">Начало курса — 8 сентября</div>
           <div class="block6__price">
-            <div class="block6__price--word">Стоимость</div>
-            <div class="block6__price--number">3900 руб.</div>
+            <div class="block6__price-word">Стоимость</div>
+            <div class="block6__price-number">3900 руб.</div>
           </div>
           <div class="block6__paragraph-wrapper">
             <div class="paragraph">
@@ -39,10 +39,10 @@
       <div class="footer__container container">
         <div class="footer__upper">
           <div class="footer__left-side">
-            <div class="footer__logo"> 
+            <div class="footer__logo">
               <img src="./assets/photo/footer/logo_mobile_white 1.png" alt="" />
             </div>
-            <div class="footer__icon">
+            <div class="footer__icons-left">
               <div class="footer__inst icon__left">
                 <img src="./assets/photo/footer/noroot(4).png" alt="" />
               </div>
@@ -59,16 +59,16 @@
           </div>
           <div class="footer__right-side">
             <div class="mobile">
-              <div class="mobile_icon icon__right">
+              <div class="mobile__icon">
                 <img src="./assets/photo/footer/phone_white.png" alt="" />
               </div>
-              <div class="mobile_number">+7 (499) 39-146-39</div>
+              <div class="mobile__number">+7 (499) 39-146-39</div>
             </div>
             <div class="mail">
-              <div class="mail_icon icon__right">
+              <div class="mail__icon">
                 <img src="./assets/photo/footer/mail_white.png" alt="" />
               </div>
-              <div class="mail_address">hello@synchronize.ru</div>
+              <div class="mail__address">hello@synchronize.ru</div>
             </div>
           </div>
         </div>
