--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,85 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
-	  <main>
+    <main>
+      <div class="main_container-wrapper">
+        <h1 class="main-header-wrapper">Программа курса</h1>
+        <div class="inner_containers">
+          <div class="little_container">
+            <img src="./assets/img/Rectangle 5.png" alt="" />
+            <p
+              class="header-p-wrapper"
+              style="font-size: 17px; font-weight: 700; line-height: 22px"
+            >
+              1. Как создают кино
+            </p>
+            <p>
+              8 сентября 20:00 <br />
+              Данила Кузнецов
+            </p>
+          </div>
+          <div class="little_container">
+            <img src="./assets/img/Rectangle 7.png" alt="" />
+            <p class="header-p-wrapper">2. Взгляд драматурга</p>
+            <p>
+              10 сентября 20:00 <br />
+              Данила Кузнецов
+            </p>
+          </div>
+          <div class="little_container">
+            <img src="./assets/img/Rectangle 9.png" alt="" />
+            <p class="header-p-wrapper">3. Взгляд режиссёра</p>
+            <p>
+              13 сентября 13:00 <br />
+              Данила Кузнецов
+            </p>
+          </div>
+          <div class="little_container">
+            <img src="./assets/img/Rectangle 13.png" alt="" />
+            <p class="header-p-wrapper">4. Взгляд монтажёра</p>
+            <p>
+              15 сентября 20:00 <br />
+              Данила Кузнецов
+            </p>
+          </div>
+          <div class="little_container">
+            <img src="./assets/img/Rectangle 14.png" alt="" />
+            <p class="header-p-wrapper">5. Жанры в кино</p>
+            <p>
+              17 сентября 20:00 <br />
+              Данила Кузнецов
+            </p>
+          </div>
+          <div class="little_container">
+            <img src="./assets/img/Rectangle 15.png" alt="" />
+            <p class="header-p-wrapper">6. Язык кино. Семинар</p>
+            <p>
+              20 сентября 13:00 <br />
+              Данила Кузнецов
+            </p>
+          </div>
+          <div class="little_container">
+            <img src="./assets/img/Rectangle 19.png" alt="" />
+            <p class="header-p-wrapper">7. Взгляд кинокритика</p>
+            <p>
+              21 сентября 19:00 <br />
+              Дмитрий Скворцов
+            </p>
+          </div>
+          <div class="little_container">
+            <img src="./assets/img/Rectangle 20.png" alt="" />
+            <p class="header-p-wrapper">8. Осознанный зритель. Семинар</p>
+            <p style="margin-top: -3px">
+              22 сентября 19:00 <br />
+              Дмитрий Скворцов
+            </p>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
