--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,6 @@
     <title>Document</title>
   </head>
   <body>
-    <main>
-      <h1>hello fuad</h1>
-    </main>
+    <main></main>
   </body>
 </html>
