--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
   </head>
   <body>
 	  <main>
+      <div class="block6">
+        <div class="block6__container container">
+          
+        </div>
+      </div>
     </main>
   </body>
 </html>
