--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,58 @@
     <title>Document</title>
   </head>
   <body>
-	  <main>
+    <main>
       <div class="block6">
         <div class="block6__container container">
-
-          
+          <div class="block6__title title">О курсе</div>
+          <div class="upper-block">
+            <div class="upper-block__paragraph-wrapper">
+              <div class="upper-block__paragraph">
+                Порой фильмы устроены сложнее четырёхтомных романов. Но читать
+                книги учат со школы, а смотреть кино — нет. При этом без
+                подготовки бывает трудно получить от просмотра удовольствие.
+              </div>
+              <div class="upper-block__paragraph">
+                На курсе из 8 занятий научимся быть осознанными зрителями.
+                Познакомимся с этапами кинопроизводства и узнаем, как смотреть
+                кино глазами сценариста, режиссёра и монтажёра. Разберёмся в
+                особенностях жанров и рассмотрим важнейшие картины, от
+                «Гражданина Кейна» до «Матрицы».
+              </div>
+            </div>
+            <div class="upper-block__right-img">
+              <img src="./assets/photo/block2/_1 1.png" alt="" />
+            </div>
+            <div class="upper-block__right-shadow">
+              <img src="./assets/photo/block2/Ellipse 2.png" alt="" />
+            </div>
+          </div>
+          <div class="lower-block">
+            <div class="lower-block__left-img">
+              <img src="./assets/photo/block2/photo 1.png" alt="" />
+            </div>
+            <div class="lower-block__left-shadow">
+              <img src="./assets/photo/block2/Ellipse 2.png" alt="" />
+            </div>
+            <div class="lower-block__paragraph-wrapper">
+              <div class="lower-block__paragraph">
+                <div class="lower-block__title">8 занятий</div>
+                <div class="lower-block__text">
+                  Для погружения в кинематограф
+                </div>
+              </div>
+              <div class="lower-block__paragraph">
+                <div class="lower-block__title">2 часа</div>
+                <div class="lower-block__text">
+                  Длительность каждого занятия
+                </div>
+              </div>
+              <div class="lower-block__paragraph">
+                <div class="lower-block__title">3 недели</div>
+                <div class="lower-block__text">Длительность курса</div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
