--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <main>
-      <div class="block6">
-        <div class="block6__container container">
-          <div class="block6__title title">О курсе</div>
+      <div class="block2">
+        <div class="block2__wrapper">
+          <div class="block2__title title">О курсе</div>
           <div class="upper-block">
             <div class="upper-block__paragraph-wrapper">
               <div class="upper-block__paragraph">
@@ -28,8 +28,10 @@
               </div>
             </div>
             <div class="upper-block__right-img">
-              <img src="./assets/photo/block2/_1 1.png" alt="" />
-              <div class="upper-block__right-shadow">
+              <div class="upper-block__img">
+                <img src="./assets/photo/block2/_1 1.png" alt="" />
+              </div>
+              <div class="upper-block__shadow">
                 <img src="./assets/photo/block2/Ellipse 2.png" alt="" />
               </div>
             </div>
@@ -37,9 +39,9 @@
           <div class="lower-block">
             <div class="lower-block__left-img">
               <img src="./assets/photo/block2/photo 1.png" alt="" />
-            </div>
-            <div class="lower-block__left-shadow">
-              <img src="./assets/photo/block2/Ellipse 2.png" alt="" />
+              <div class="lower-block__left-shadow">
+                <img src="./assets/photo/block2/Ellipse 2.png" alt="" />
+              </div>
             </div>
             <div class="lower-block__paragraph-wrapper">
               <div class="lower-block__paragraph">
