--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
                 «Гражданина Кейна» до «Матрицы».
               </div>
             </div>
-            <div class="upper-block__right-img">
+            <div class="upper-block__img-wrapper">
               <div class="upper-block__img">
                 <img src="./assets/photo/block2/_1 1.png" alt="" />
               </div>
@@ -38,8 +38,10 @@
           </div>
           <div class="lower-block">
             <div class="lower-block__left-img">
-              <img src="./assets/photo/block2/photo 1.png" alt="" />
-              <div class="lower-block__left-shadow">
+              <div class="lower-block__img">
+                <img src="./assets/photo/block2/photo 1.png" alt="" />
+              </div>
+              <div class="lower-block__shadow">
                 <img src="./assets/photo/block2/Ellipse 2.png" alt="" />
               </div>
             </div>
