--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,7 @@
                 alt="photo"
                 class="first-block__img"
               />
+              <div class="first-block__ellipse"></div>
             </div>
           </div>
           <div class="quote-wrapper">
