hopefully last update

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
             </div>
             <div class="first-block__img-wrapper">
               <img
-                src="./assets/images/noroot 1.jpg"
+                src="./assets/images/noroot 1.png"
                 alt="photo"
                 class="first-block__img"
               />
