--- a/src/index.html
+++ b/src/index.html
@@ -8,59 +8,62 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <div class="container_header">
-        <h1>Формат занятий</h1>
-        <div class="container_header_columns">
-          <div>
-            <p class="container_header_columns_up">Вебинары</p>
-            <p class="container_header_columns_down">
-              Занятия проходят онлайн<br />
-              в режиме вебинаров<br />
-              с преподавателем
-            </p>
-          </div>
-          <div>
-            <p class="container_header_columns_up">Доступ навсегда</p>
-            <p class="container_header_columns_down">
-              Если вы не успели на вебинар,<br />
-              всегда можете посмотреть<br />
-              запись в личном кабинете
-            </p>
-          </div>
-          <div>
-            <p class="container_header_columns_up">Общение</p>
-            <p class="container_header_columns_down">
-              Вы можете задать вопрос<br />
-              преподавателю на занятии
-            </p>
+    <main>
+      <div class="container">
+        <div class="container_header">
+          <h1>Формат занятий</h1>
+          <div class="container_header_columns">
+            <div>
+              <p class="container_header_columns_up">Вебинары</p>
+              <p class="container_header_columns_down">
+                Занятия проходят онлайн<br />
+                в режиме вебинаров<br />
+                с преподавателем
+              </p>
+            </div>
+            <div>
+              <p class="container_header_columns_up">Доступ навсегда</p>
+              <p class="container_header_columns_down">
+                Если вы не успели на вебинар,<br />
+                всегда можете посмотреть<br />
+                запись в личном кабинете
+              </p>
+            </div>
+            <div>
+              <p class="container_header_columns_up">Общение</p>
+              <p class="container_header_columns_down">
+                Вы можете задать вопрос<br />
+                преподавателю на занятии
+              </p>
+            </div>
           </div>
         </div>
+        <div class="container_footer">
+          <h1>Что узнаем</h1>
+          <ul>
+            <li>Кто чем занят в съёмочной группе;</li>
+            <li>На какие этапы делится кинопроизводство;</li>
+            <li>
+              Как выглядит сценарий фильма и как он меняется<br />по ходу
+              съёмок;
+            </li>
+            <li>
+              Какими методами режиссёры заставляют нас смеяться, плакать<br />
+              и грустить;
+            </li>
+            <li>
+              Как построение кадра, музыка и свет помогают считывать заложенные
+              в<br />
+              фильм смыслы;
+            </li>
+            <li>
+              Какие жанры есть в кино и как от них зависит работа операторов,<br />
+              осветителей и монтажёров;
+            </li>
+            <li>Как, зная всё это, понимать, о чем фильм.</li>
+          </ul>
+        </div>
       </div>
-      <div class="container_footer">
-        <h1>Что узнаем</h1>
-        <ul>
-          <li>Кто чем занят в съёмочной группе;</li>
-          <li>На какие этапы делится кинопроизводство;</li>
-          <li>
-            Как выглядит сценарий фильма и как он меняется<br />по ходу съёмок;
-          </li>
-          <li>
-            Какими методами режиссёры заставляют нас смеяться, плакать<br />
-            и грустить;
-          </li>
-          <li>
-            Как построение кадра, музыка и свет помогают считывать заложенные
-            в<br />
-            фильм смыслы;
-          </li>
-          <li>
-            Какие жанры есть в кино и как от них зависит работа операторов,<br />
-            осветителей и монтажёров;
-          </li>
-          <li>Как, зная всё это, понимать, о чем фильм.</li>
-        </ul>
-      </div>
-    </div>
+    </main>
   </body>
 </html>
