--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
                 alt="photo"
                 class="first-block__img"
               />
-              <div class="first-block__ellipse"></div>
+              <div class="first-block__ellipse"><img src="./assets/photo/block2/Ellipse 2.png" alt=""></div>
             </div>
           </div>
           <div class="quote-wrapper">
@@ -133,7 +133,7 @@
       </div>
       <div class="block3__container">
         <div class="container_header">
-          <h1>Формат занятий</h1>
+          <h1 class="block3__title">Формат занятий</h1>
           <div class="container_header_columns">
             <div>
               <p class="container_header_columns_up">Вебинары</p>
@@ -161,7 +161,7 @@
            </div>
         </div>
         <div class="container_footer">
-          <h1>Что узнаем</h1>
+          <h1 class="block3__title">Что узнаем</h1> 
           <ul>
             <li>Кто чем занят в съёмочной группе;</li>
             <li>На какие этапы делится кинопроизводство;</li>
@@ -263,7 +263,7 @@
         </div>
       </div>
       <div class="main_container">
-        <div class="container">
+        <div class="container__wrapper">
           <h1 class="container__header">Курс прошло уже 1616 человек</h1>
           <div class="card">
             <div class="card__text">
