--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,9 @@
                 alt="photo"
                 class="first-block__img"
               />
-              <div class="first-block__ellipse"><img src="./assets/photo/block2/Ellipse 2.png" alt=""></div>
+              <div class="first-block__ellipse">
+                <img src="./assets/photo/block2/Ellipse 2.png" alt="" />
+              </div>
             </div>
           </div>
           <div class="quote-wrapper">
@@ -158,10 +160,10 @@
                 преподавателю на занятии
               </p>
             </div>
-           </div>
+          </div>
         </div>
         <div class="container_footer">
-          <h1 class="block3__title">Что узнаем</h1> 
+          <h1 class="block3__title">Что узнаем</h1>
           <ul>
             <li>Кто чем занят в съёмочной группе;</li>
             <li>На какие этапы делится кинопроизводство;</li>
