--- a/src/index.html
+++ b/src/index.html
@@ -53,13 +53,15 @@
               </div>
             </div>
             <div class="first-block__img-wrapper">
-              <img
-                src="./assets/images/noroot 1.png"
-                alt="photo"
-                class="first-block__img"
-              />
-              <div class="first-block__ellipse">
-                <img src="./assets/photo/block2/Ellipse 2.png" alt="" />
+              <div class="first-block__img">
+                <img
+                  src="./assets/images/noroot 1.png"
+                  alt="photo"
+                  class="first-block__img"
+                />
+                <div class="first-block__ellipse">
+                  <img src="./assets/photo/block2/Ellipse 2.png" alt="" />
+                </div>
               </div>
             </div>
           </div>
