--- a/src/index.html
+++ b/src/index.html
@@ -195,12 +195,7 @@
         <div class="inn_containers">
           <div class="inn_containers__element">
             <img src="./assets/img/Rectangle 5.png" alt="" />
-            <p
-              class="inn_containers__element__header"
-              style="font-size: 17px; font-weight: 700; line-height: 22px"
-            >
-              1. Как создают кино
-            </p>
+            <p class="inn_containers__element__header">1. Как создают кино</p>
             <p>
               8 сентября 20:00 <br />
               Данила Кузнецов
