not needed folders deleted

--- a/src/index.html
+++ b/src/index.html
@@ -11,21 +11,17 @@
     <main class="main">
       <div class="container">
         <header>
-          <img
-            src="./assets/images/logo_mobile_black 1.png"
-            alt=""
-            class="logo"
-          />
+          <img src="./assets/img/logo_mobile_black 1.png" alt="" class="logo" />
         </header>
         <div class="first-block">
           <div class="first-block__elements-wrapper">
             <div class="first-block__element">
-              <img src="./assets/images/globe.svg" alt="globe" class="globe" />
+              <img src="./assets/img/globe.svg" alt="globe" class="globe" />
               <p class="first-block__p">онлайн-курс</p>
             </div>
             <div class="first-block__element">
               <img
-                src="./assets/images/img_135744.svg"
+                src="./assets/img/img_135744.svg"
                 alt="clock"
                 class="clock"
               />
@@ -33,7 +29,7 @@
             </div>
             <div class="first-block__element">
               <img
-                src="./assets/images/calendar_2.svg"
+                src="./assets/img/calendar_2.svg"
                 alt="calendar"
                 class="calendar"
               />
@@ -55,12 +51,12 @@
             <div class="first-block__img-wrapper">
               <div class="first-block__img">
                 <img
-                  src="./assets/images/noroot 1.png"
+                  src="./assets/img/noroot 1.png"
                   alt="photo"
                   class="first-block__img"
                 />
                 <div class="first-block__ellipse">
-                  <img src="./assets/photo/block2/Ellipse 2.png" alt="" />
+                  <img src="./assets/img/Ellipse 2.png" alt="" />
                 </div>
               </div>
             </div>
@@ -98,20 +94,20 @@
             </div>
             <div class="upper-block__img-wrapper">
               <div class="upper-block__img">
-                <img src="./assets/photo/block2/_1 1.png" alt="" />
+                <img src="./assets/img/_1 1.png" alt="" />
               </div>
               <div class="upper-block__shadow">
-                <img src="./assets/photo/block2/Ellipse 2.png" alt="" />
+                <img src="./assets/img/Ellipse 2.png" alt="" />
               </div>
             </div>
           </div>
           <div class="lower-block">
             <div class="lower-block__left-img">
               <div class="lower-block__img">
-                <img src="./assets/photo/block2/photo 1.png" alt="" />
+                <img src="./assets/img/photo 1.png" alt="" />
               </div>
               <div class="lower-block__shadow">
-                <img src="./assets/photo/block2/Ellipse 2.png" alt="" />
+                <img src="./assets/img/Ellipse 2.png" alt="" />
               </div>
             </div>
             <div class="lower-block__paragraph-wrapper">
@@ -275,7 +271,7 @@
             </div>
             <div class="card__social">
               <div class="card__social__photo">
-                <img src="./assests/img/1 9.png" alt="" />
+                <img src="./assets/img/1 9.png" alt="" />
               </div>
               <div class="card__social__meta">
                 <div class="card__social__meta__name">
@@ -284,7 +280,7 @@
                   </p>
                 </div>
                 <div class="card__social__meta__icon">
-                  <img src="./assests/img/fb_2 1.png" alt="" />
+                  <img src="./assets/img/fb_2 1.png" alt="" />
                 </div>
               </div>
             </div>
@@ -322,33 +318,33 @@
         <div class="footer__upper">
           <div class="footer__left-side">
             <div class="footer__logo">
-              <img src="./assets/photo/footer/logo_mobile_white 1.png" alt="" />
+              <img src="./assets/img/logo_mobile_white 1.png" alt="" />
             </div>
             <div class="footer__icons-left">
               <div class="footer__inst icon__left">
-                <img src="./assets/photo/footer/noroot(4).png" alt="" />
+                <img src="./assets/img/noroot(4).png" alt="" />
               </div>
               <div class="footer__facebook icon__left">
-                <img src="./assets/photo/footer/fb.png" alt="" />
+                <img src="./assets/img/fb.png" alt="" />
               </div>
               <div class="footer__VK icon__left">
-                <img src="./assets/photo/footer/25684 1.png" alt="" />
+                <img src="./assets/img/25684 1.png" alt="" />
               </div>
               <div class="footer__WhatsApp icon__left">
-                <img src="./assets/photo/footer/noroot(2).png" alt="" />
+                <img src="./assets/img/noroot(2).png" alt="" />
               </div>
             </div>
           </div>
           <div class="footer__right-side">
             <div class="mobile">
               <div class="mobile__icon">
-                <img src="./assets/photo/footer/phone_white.png" alt="" />
+                <img src="./assets/img/phone_white.png" alt="" />
               </div>
               <div class="mobile__number">+7 (499) 39-146-39</div>
             </div>
             <div class="mail">
               <div class="mail__icon">
-                <img src="./assets/photo/footer/mail_white.png" alt="" />
+                <img src="./assets/img/mail_white.png" alt="" />
               </div>
               <div class="mail__address">hello@synchronize.ru</div>
             </div>
